lib/src/sdk/typescript/snapshots/usage__sdk__typescript__types__tests__typescript_global_repeatable_flags.snap
---
source: lib/src/sdk/typescript/types.rs
expression: types
---
// @generated by usage-cli from test.usage.kdl. Do not edit manually.

/** Global flags available on all subcommands. */
export interface GlobalFlags {
  /** Repeatable verbose */
  verbose?: boolean[];
  /** Repeatable tag */
  tag?: string[];
}

export interface AppFlags extends GlobalFlags {
  /** Repeatable verbose */
  verbose?: boolean[];
  /** Repeatable tag */
  tag?: string[];
}

export interface RunArgs {
  target: string;
}

export interface RunFlags extends GlobalFlags {
}
