lib/src/sdk/typescript/snapshots/usage__sdk__typescript__types__tests__typescript_negate_flag_build.snap
---
source: lib/src/sdk/typescript/types.rs
expression: client
---
// @generated by usage-cli from test.usage.kdl. Do not edit manually.
import { CliRunner, CliResult } from "./runtime";
import { AppFlags } from "./types";

export class App {
  private runner: CliRunner;

  constructor(binPath?: string) {
    this.runner = new CliRunner(binPath ?? "app");
  }
  /** [--dry-run] */
  async exec(flags?: AppFlags): Promise<CliResult> {
    const cmdArgs: string[] = [];
    const flagArgs = this.buildFlagArgs(flags);
    cmdArgs.push(...flagArgs);
    return this.runner.run(cmdArgs);
  }

  private buildFlagArgs(flags?: AppFlags): string[] {
    const result: string[] = [];
    if (!flags) return result;
    if (flags.dryRun) { result.push("--dry-run"); }
    else if (flags.dryRun === false) { result.push("--no-dry-run"); }
    return result;
  }
}
