lib/src/sdk/typescript/snapshots/usage__sdk__typescript__types__tests__typescript_optional_arg_empty_flags.snap
---
source: lib/src/sdk/typescript/types.rs
expression: types
---
// @generated by usage-cli from test.usage.kdl. Do not edit manually.

export interface AppArgs {
  /** Optional arg without default */
  name?: string;
}

export interface CheckArgs {
  /** Required arg */
  target: string;
  /** Optional arg with default */
  mode?: string;
}
