lib/src/sdk/typescript/snapshots/usage__sdk__typescript__types__tests__typescript_required_flag_type.snap
---
source: lib/src/sdk/typescript/types.rs
expression: types
---
// @generated by usage-cli from test.usage.kdl. Do not edit manually.

export interface ToolFlags {
  /** Auth token */
  token: string;
}
