lib/src/sdk/typescript/snapshots/usage__sdk__typescript__types__tests__typescript_types.snap
---
source: lib/src/sdk/typescript/types.rs
expression: "get_file(&output, \"types.ts\")"
---
// @generated by usage-cli from test.usage.kdl. Do not edit manually.

export type Arg2Choice = "choice1" | "choice2" | "choice3";
export type ShellChoice = "bash" | "zsh" | "fish";

export interface MycliArgs {
  /** arg1 description */
  arg1: string;
  /** arg2 description */
  arg2?: Arg2Choice;
  /** arg3 description */
  arg3: string;
  argrest: string[];
  withDefault?: string;
}

export interface MycliFlags {
  /** flag1 description */
  flag1?: boolean;
  /** flag2 description */
  flag2?: boolean;
  /** flag3 description */
  flag3?: boolean;
  /** @default default value */
  withDefault?: boolean;
  shell?: ShellChoice;
}

export interface InstallArgs {
  plugin: string;
  version: string;
}

export interface InstallFlags {
  global?: boolean;
  dir?: string;
  force?: boolean;
}
