lib/src/sdk/typescript/snapshots/usage__sdk__typescript__types__tests__typescript_var_value_flag_with_default.snap
---
source: lib/src/sdk/typescript/types.rs
expression: types
---
// @generated by usage-cli from test.usage.kdl. Do not edit manually.

export interface ToolFlags {
  /** Tags. @default latest */
  tag?: string[];
}
